# aws-openai

./: .bumpversion.cfg  .coverage  .coveragerc  .editorconfig  .eslintrc.js  .flake8  .gitattributes  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  LICENSE  Makefile  README.md  SEMANTIC_VERSIONING.md  codespell.txt  commitlint.config.js  openai.ipynb  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  run_pylint.sh  tox.ini
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: README.md
chatgpt_client/: .eslintrc.json  Makefile  package-lock.json
client/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
doc/: CONTRIBUTING.md  GOOD_CODING_PRACTICE.md  README.md  SEMANTIC_VERSIONING.md  TERRAFORM.md  TERRAFORM_GETTING_STARTED_GUIDE.md  Twelve_Factor_Methodology.md  apigateway_endpoint_500_response.json  apigateway_endpoint_airport_codes_result.json  apigateway_endpoint_grammar.request.body.json  apigateway_event_request.json  apigateway_troubleshooting_cloudfront.html  cloudwatch-apigateway-request-after-transformations  cloudwatch-apigateway-request-before-transformations  cloudwatch-apigateway-response-after-transformations.json  cloudwatch-apigateway-response-before-transformations.json  cloudwatch-lambda-environment-dump.json  cloudwatch-lambda-event-dump.json  cloudwatch-lambda-response-dump.json  example-dot-env  illustrations.key  lambda_openai_text.md  (+5 more)
(+406 files in other folders)
